Do direct formatting of times other than local to eliminate TZ processing imposed by Java Calendar Class. TODO: incorporate location override & add Hour Angle activity