@@ -14,9 +14,34 @@ import static java.lang.Math.abs;
 
 
 public class text {
+    // format date string the old way - No timezone processing involved
+    public static String tHMS_format(Long seconds){
+        Long second = seconds % 60;
+        Long minute = (seconds/60) % 60;
+        Long hour = (seconds/3600) % 24;
+        return String.format("%02d:%02d:%02d", hour, minute, second);
+    }
+
+    // format time in seconds as 24-hour time with timezone applied
+    public static String t24hr_format(Long seconds) {
+        SimpleDateFormat sdf = new SimpleDateFormat("HH:mm:ss z");
+        Calendar c = Calendar.getInstance();
+        c.setTimeInMillis(1000*seconds);
+        String t = sdf.format(c.getTime());
+        return sdf.format(c.getTime());
+    }
+
+    // format date as YYYY.MM.DD
+    public static String tYMD_format(Long seconds) {
+        Calendar c = Calendar.getInstance();
+        SimpleDateFormat sdf = new SimpleDateFormat("yyyy.MM.dd");
+        c.setTimeInMillis(seconds*1000);
+        return sdf.format(c.getTime());
+    }
+
     // format lat or long as degrees/minutes/seconds
     public static String dms_format(Double degrees, boolean isLongitude) {
-        Long seconds = new Double(degrees * 3600).longValue();
+        Long seconds = Double.valueOf(degrees * 3600).longValue();
         String suffix = (isLongitude)?
                 ((seconds < 0) ? "\" W" : "\" E"):
                 ((seconds < 0) ? "\" S" : "\" N");
@@ -25,29 +50,5 @@ public class text {
     }
 
     private static String degsym = String.format("%c ",176);
-
-    // format time in seconds as 24-hour time
-    public static String t24hr_format(Long seconds, boolean utc) {
-        SimpleDateFormat sdf = new SimpleDateFormat("HH:mm:ss z");
-        Locale l = utc?Locale.UK:Locale.getDefault();
-        Calendar c = utc?
-            Calendar.getInstance(TimeZone.getTimeZone("+00"),Locale.UK):
-            Calendar.getInstance();
-        c.setTimeInMillis(1000*seconds);
-        String t = sdf.format(c.getTime());
-        return sdf.format(c.getTime());
-        //Long time = seconds % 86400, hour = time/3600, minute = (time%3600)/60, second = time%60;
-        //return String.format("%02d:%02d:%02d",hour,minute,second);
-    }
-
-    // format date as YYYY.MM.DD
-    public static String tYMD_format(Long seconds, boolean utc) {
-        Calendar c = Calendar.getInstance((utc? Locale.UK: Locale.getDefault()));
-        SimpleDateFormat sdf = new SimpleDateFormat("yyyy.MM.dd");
-        c.setTimeInMillis(seconds*1000);
-        // note: Month range 0-11
-        //return String.format("%04d.%02d.%02d",c.get(Calendar.YEAR),1+c.get(Calendar.MONTH),c.get(Calendar.DAY_OF_MONTH));
-        return sdf.format(c.getTime());
-    }
 
 }
